# LaudatorAI

./: .env.production.template  .env.staging.template  .gitignore  CONTRIBUTING.md  CORS_FIX_GUIDE.md  LICENSE  LOGGING_GUIDE.md  PORTFOLIO.md  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  test_frontend_backend_integration.py  test_logging.py
backend/: .env.example  .env.production.example  DEBUG_HEALTH_CHECK.md  Dockerfile  Dockerfile.prod  Dockerfile.staging  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_MINIO_SETUP.md  RAILWAY_QUICK_FIX.md  RAILWAY_TROUBLESHOOTING.md  README.md  alembic.ini  check_railway_redis_urls.py  check_redis_config.py  debug_railway.py  fix_railway_deployment.py  fix_railway_deployment_complete.py  fix_redis_connection.py  nixpacks.toml  pyproject.toml  railway.env.template  railway.json  requirements.txt  run_tests.py  set_cors_env.py  set_railway_env.py  start.py  test_basic_integration.py  test_r2_connection.py  test_railway_redis.py  test_simple_integration.py  test_startup.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: application_processing.py  cleanup.py  cover_letter_processing.py  file_storage.py  jd_normalization.py  (+3 more)
backend/scripts/: init_db.py  start_celery_worker.py
backend/tests/: test_complete_integration.py  test_cover_letter_processing.py  test_e2e.py  test_integration.py  test_performance.py  test_resume_processing.py  test_security.py
(+68 files in other folders)
